--- a/jinx.yaml
+++ b/jinx.yaml
@@ -14,8 +14,8 @@ image:
   registry: docker.io
   repository: bitnami/nginx
    tag: 1.23.2-debian-11-r6
-#  tag: 1.23.1-debian-11-r34
-#  tag: 1.21.1-debian-10-r25
+   ##tag: 1.23.1-debian-11-r34
+   ##tag: 1.21.1-debian-10-r25
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if1image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
